index html were updated according to the instruction given

--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
+
 <body>
-    
+    <section>
+
+        <div class="map-cont">
+
+            <div class="mapouter">
+                <div class="gmap_canvas">
+                    <iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                        src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=university of dodoma&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+
+                    </iframe>
+                    <a href="https://capcuttemplate.org/">Capcuttemplate.org</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="form-cont">
+            <form action="#">
+                <label for="email">Email</label>
+                <input type="text" placeholder="Enter your email" required>
+                <label for="email">phone</label>
+                <input type="text" placeholder="Enter your mobile Phone number" required>
+                <label for="email">Comment</label>
+                <textarea name="comment" id="comment" placeholder="Add your comment here"></textarea>
+
+                <button>SUBMIT</button>
+
+            </form>
+
+        </div>
+
+    </section>
+
+    <div class="quick-links">
+        <h2>Quick links</h2>
+        <div class="link-cont">
+            <img src="../Assets/link.png" alt="link">
+            <a href="#">link 1</a>
+        </div>
+
+        <div class="link-cont">
+            <img src="../Assets/link.png" alt="link">
+            <a href="#">link 2</a>
+        </div>
+
+        <div class="link-cont">
+            <img src="../Assets/link.png" alt="link">
+            <a href="#">link 3</a>
+        </div>
+
+        <div class="link-cont">
+            <img src="../Assets/link.png" alt="link">
+            <a href="#">link 4</a>
+        </div>
+
+        <div class="link-cont">
+            <img src="../Assets/link.png" alt="link">
+            <a href="#">link 5</a>
+        </div>
+
+        <div class="link-cont">
+            <img src="../Assets/link.png" alt="link">
+            <a href="#">link 5</a>
+        </div>
+
+    </div>
+
+    <footer>
+        <p>This website is created and maintained by <a href="https://www.udom.ac.tz/">University of Dodoma</a> computer
+            science students</p>
+        <p>© Copyright 2023, All Rights Reserved</p>
+    </footer>
+
 </body>
+
 </html>
