--- a/index.html
+++ b/index.html
@@ -6,82 +6,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style2.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
     <section>
 
-        <div class="map-cont">
+        <div class="footmain">
 
-            <div class="mapouter">
-                <div class="gmap_canvas">
-                    <iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                        src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=university of dodoma&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+            <!-- <div class="map-cont"> -->
 
-                    </iframe>
-                    <a href="https://capcuttemplate.org/">Capcuttemplate.org</a>
-                </div>
+            <iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=university of dodoma&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+
+            </iframe>
+            <!-- </div> -->
+
+            <div class="form-cont">
+                <form>
+                    <!-- Name input -->
+                    <div class="form-outline mb-4">
+                        <input type="text" id="form4Example1" class="form-control" placeholder="Name" />
+                        <!-- <label class="form-label" for="form4Example1">Name</label> -->
+                    </div>
+
+                    <!-- Email input -->
+                    <div class="form-outline mb-4">
+                        <input type="email" id="form4Example2" class="form-control" placeholder="Email address" />
+                        <!-- <label class="form-label" for="form4Example2">Email address</label> -->
+                    </div>
+
+                    <!-- Message input -->
+                    <div class="form-outline mb-4">
+                        <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                        <label class="form-label" for="form4Example3">Message</label>
+                    </div>
+
+                    <!-- Submit button -->
+                    <button type="submit" class="btn btn-primary btn-block mb-4">Send</button>
+                </form>
             </div>
 
         </div>
 
-        <div class="form-cont">
-            <form action="#">
-                <label for="email">Email</label>
-                <input type="text" placeholder="Enter your email" required>
-                <label for="email">phone</label>
-                <input type="text" placeholder="Enter your mobile Phone number" required>
-                <label for="email">Comment</label>
-                <textarea name="comment" id="comment" placeholder="Add your comment here"></textarea>
+        <footer>
+            <div class="foot-start">
+            <!-- <h2>Quick links</h2> -->
+            <ul class="contacts">
+                <h5>Contacts</h5> 
+                <li><a class="text-light" href="tel:+255262310003">Tel: (+255) 262 310 003</a></li>
+                <li>1 Benjamin Mkapa road, 41218 Iyumbu, Dodoma.</li>
+                <li><a href="email:info@udom.ac.tz">info@udom.ac.tz</a></li>
+            </ul>
+            <ul class="quick-link">
+                <h5>Quick Links</h5>
+                <li><a href="https://www.mirembe.or.tz/">Mirembe Hospital</a></li>
+                <li><a href="https://www.mloganzila.or.tz/psychiatry">Muhimbili psychiatry Department</a></li>
+                <li><a href="#">International psychiatry Concern</a></li>
+            </ul>
+            </div>
 
-                <button>SUBMIT</button>
 
-            </form>
-
-        </div>
+            <div class="final-foot">
+                <p>This website is created and maintained by <a href="https://www.udom.ac.tz/">University of Dodoma</a>
+                    computer
+                    science students</p>
+                <p>© Copyright 2023, All Rights Reserved</p>
+            </div>
+        </footer>
 
     </section>
-
-    <div class="quick-links">
-        <h2>Quick links</h2>
-        <div class="link-cont">
-            <img src="../Assets/link.png" alt="link">
-            <a href="#">link 1</a>
-        </div>
-
-        <div class="link-cont">
-            <img src="../Assets/link.png" alt="link">
-            <a href="#">link 2</a>
-        </div>
-
-        <div class="link-cont">
-            <img src="../Assets/link.png" alt="link">
-            <a href="#">link 3</a>
-        </div>
-
-        <div class="link-cont">
-            <img src="../Assets/link.png" alt="link">
-            <a href="#">link 4</a>
-        </div>
-
-        <div class="link-cont">
-            <img src="../Assets/link.png" alt="link">
-            <a href="#">link 5</a>
-        </div>
-
-        <div class="link-cont">
-            <img src="../Assets/link.png" alt="link">
-            <a href="#">link 5</a>
-        </div>
-
-    </div>
-
-    <footer>
-        <p>This website is created and maintained by <a href="https://www.udom.ac.tz/">University of Dodoma</a> computer
-            science students</p>
-        <p>© Copyright 2023, All Rights Reserved</p>
-    </footer>
 
 </body>
 
