--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <section>
-        <!-- Your section here -->
+    <section class="hero">
+        <nav>
+            <div class="logo">
+                <p>mHealth</p>
+            </div>
+
+            <ul class="quick">
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Faq</li>
+            </ul>
+        </nav>
+
+        <div class="hero-main">
+            <div class="container ctn-hero">
+                <h1 class="hero-heading">Supporting Mental Wellness,<br>One Person at a Time</h1>
+                <p class="hero-subheading">We are a community of mental health advocates providing resources and support to
+                    those in need.</p>
+                <div class="btn-container">
+                    <a href="#" class="button btn-grad button-primary">explore</a>
+            </div>
+        </div>
+
     </section>
 </body>
 </html>
