--- a/index.html
+++ b/index.html
@@ -1,35 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Section</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <title>Mental Health Website</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        /* Custom Styles */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+            margin: 0;
+            padding: 0;
+        }
+
+        .hero-section {
+            position: relative;
+            height: 100vh;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            color: #fff;
+            background-image: url("./testHero/assets/f1.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+
+        .hero-section-content {
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero-section h1 {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+            color: green;
+        }
+
+        .hero-section p {
+            font-size: 1.5rem;
+            margin-bottom: 2rem;
+            color: green;
+        }
+
+        .hero-section .btn {
+            font-size: 1.2rem;
+        }
+
+        .section {
+            position: relative;
+            height: 100vh;
+        }
+
+        .section-content {
+            position: relative;
+            z-index: 1;
+        }
+
+        .navbar {
+            background-color: #fff;
+            border-bottom: 1px solid #ddd;
+            padding: 10px 20px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 999;
+        }
+
+        .navbar .navbar-brand {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .navbar-toggler {
+            color: #333;
+            border-color: #333;
+            margin-right: 5px;
+        }
+
+        .navbar .navbar-nav {
+            margin-left: auto;
+        }
+
+        .navbar .navbar-nav .nav-link {
+            color: #333;
+            font-size: 1rem;
+            margin-left: 20px;
+        }
+
+        .navbar .navbar-nav .nav-link:hover {
+            color: #555;
+        }
+
+        .scroll-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #555;
+            color: #fff;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s ease, visibility 0.3s ease;
+        }
+
+        .scroll-to-top.show {
+            opacity: 1;
+            visibility: visible;
+        }
+    </style>
 </head>
+
 <body>
-    <section class="hero">
-        <nav>
-            <div class="logo">
-                <p>mHealth</p>
-            </div>
-
-            <ul class="quick">
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Faq</li>
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#">Your Logo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
             </ul>
-        </nav>
+        </div>
+    </nav>
 
-        <div class="hero-main">
-            <div class="container ctn-hero">
-                <h1 class="hero-heading">Supporting Mental Wellness,<br>One Person at a Time</h1>
-                <p class="hero-subheading">We are a community of mental health advocates providing resources and support to
-                    those in need.</p>
-                <div class="btn-container">
-                    <a href="#" class="button btn-grad button-primary">explore</a>
+    <div class="hero-section" id="home">
+        <div class="hero-section-content">
+            <div class="container">
+                <h1>Welcome to Your Mental Health Journey</h1>
+                <p>Find the support and resources you need for a healthy mind and well-being.</p>
+                <a class="btn btn-primary" href="#about">Get Started</a>
             </div>
         </div>
+    </div>
 
+    <section class="section" id="about">
+        <div class="section-content">
+            <div class="container">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur libero ac odio molestie, vel
+                    bibendum nulla pharetra.</p>
+            </div>
+        </div>
     </section>
+
+    <section class="section" id="services">
+        <div class="section-content">
+            <div class="container">
+                <h2>Services</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur libero ac odio molestie, vel
+                    bibendum nulla pharetra.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section" id="contact">
+        <div class="section-content">
+            <div class="container">
+                <h2>Contact</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur libero ac odio molestie, vel
+                    bibendum nulla pharetra.</p>
+            </div>
+        </div>
+    </section>
+
+    <div class="scroll-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            // Parallax effect on scroll
+            $(window).scroll(function () {
+                var scrollTop = $(this).scrollTop();
+                $('.hero-section').css('background-position-y', -(scrollTop * 0.5) + 'px');
+            });
+            $(window).scroll(function () {
+                var scrollTop = $(this).scrollTop();
+                $('.hero-section').css('transform', 'translate3d(0, ' + -(scrollTop * 0.5) + 'px, 0)');
+            });
+
+            // Smooth Scrolling
+            $('a[href^="#"]').on('click', function (event) {
+                var target = $(this.getAttribute('href'));
+                if (target.length) {
+                    event.preventDefault();
+                    $('html, body').stop().animate({
+                        scrollTop: target.offset().top
+                    }, 800);
+                }
+            });
+
+            // Scroll-to-Top Button
+            $(window).scroll(function () {
+                if ($(this).scrollTop() > 200) {
+                    $('.scroll-to-top').addClass('show');
+                } else {
+                    $('.scroll-to-top').removeClass('show');
+                }
+            });
+
+            $('.scroll-to-top').click(function () {
+                $('html, body').animate({
+                    scrollTop: 0
+                }, 800);
+                return false;
+            });
+        });
+    </script>
 </body>
+
 </html>
