added kapyela's testing section on my test pure hero

--- a/testHero/index.html
+++ b/testHero/index.html
@@ -27,6 +27,73 @@
     </div>
   </section>
 
+  <section>
+
+    <div class="footmain">
+
+        <!-- <div class="map-cont"> -->
+
+        <iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+            src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=university of dodoma&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+
+        </iframe>
+        <!-- </div> -->
+
+        <div class="form-cont">
+            <form>
+                <!-- Name input -->
+                <div class="form-outline mb-4">
+                    <input type="text" id="form4Example1" class="form-control" placeholder="Name" />
+                    <!-- <label class="form-label" for="form4Example1">Name</label> -->
+                </div>
+
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                    <input type="email" id="form4Example2" class="form-control" placeholder="Email address" />
+                    <!-- <label class="form-label" for="form4Example2">Email address</label> -->
+                </div>
+
+                <!-- Message input -->
+                <div class="form-outline mb-4">
+                    <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                    <label class="form-label" for="form4Example3">Message</label>
+                </div>
+
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary btn-block mb-4">Send</button>
+            </form>
+        </div>
+
+    </div>
+
+    <footer>
+        <div class="foot-start">
+        <!-- <h2>Quick links</h2> -->
+        <ul class="contacts">
+            <h5>Contacts</h5> 
+            <li><a class="text-light" href="tel:+255262310003">Tel: (+255) 262 310 003</a></li>
+            <li>1 Benjamin Mkapa road, 41218 Iyumbu, Dodoma.</li>
+            <li><a href="email:info@udom.ac.tz">info@udom.ac.tz</a></li>
+        </ul>
+        <ul class="quick-link">
+            <h5>Quick Links</h5>
+            <li><a href="https://www.mirembe.or.tz/">Mirembe Hospital</a></li>
+            <li><a href="https://www.mloganzila.or.tz/psychiatry">Muhimbili psychiatry Department</a></li>
+            <li><a href="#">International psychiatry Concern</a></li>
+        </ul>
+        </div>
+
+
+        <div class="final-foot">
+            <p>This website is created and maintained by <a href="https://www.udom.ac.tz/">University of Dodoma</a>
+                computer
+                science students</p>
+            <p>© Copyright 2023, All Rights Reserved</p>
+        </div>
+    </footer>
+
+</section>
+
 
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
