--- a/faq/index.html
+++ b/faq/index.html
@@ -187,7 +187,7 @@
             <ul>
               <li>Persistent feelings of sadness, hopelessness, or emptiness.</li>
               <li>Intense anxiety or panic attacks.</li>
-              <li>Difficulty functioning at work, school, or in relationships.</li>
+              <li>Difficulty functioning at work, school, or in relationships</li>
               <li>Thoughts of self-harm or suicide.</li>
               <li>Substance abuse or excessive use of alcohol.</li>
               <li>Significant changes in appetite, sleep patterns, or energy levels.</li>
