changed Hero section a bit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <section>
-        <div class="topBar">
+        <!-- <div class="topBar">
             <div class="TheLogo">
                 <h1>Mental Health</h1>
             </div>
@@ -26,9 +26,9 @@
                     </ul>
                 </nav>
             </div>
-        </div>
-        <div class="par1">
-            <p>About Us</p>
+        </div> -->
+        <div class="hero-section">
+            <!-- <p>About Us</p> -->
 
         </div>
         <div class="parAbt">
