refined and changed the about us section design

--- a/index.html
+++ b/index.html
@@ -32,31 +32,49 @@
 
         </div>
         <div class="parAbt">
-            <h5>Welcome to our website!</h5>
-            <p>We are a group of year two computer science students studying at the University of Dodoma, specifically
-                in the College of Informatics and Virtual Education (CIVE). Our team consists of Philes Philbert, Joseph
-                Gabriel, Kapyela Eliah, Anuary Bakar, Daudi Joel, Pendo Mniko, Martha Mark, Suleiman Suleiman, and Erick
-                Sangiwa. We have come together with a common goal to provide valuable information about mental health
-                through this platform</p>
-            <p>At our university, we are exposed to a wide range of computer science concepts and technologies, which
-                has enabled us to create this informative website. We believe that mental health is an important aspect
-                of well-being that should be discussed and addressed more openly. We aim to share accurate and helpful
-                information on mental health topics.</p>
-            <p>Mental health is a subject that affects everyone, regardless of age, gender, or background. It is crucial
-                to address mental health concerns, provide support, and educate individuals about available resources.
-                We hope our website can be your private space where you can access reliable information about various
-                mental health issues, including anxiety, depression, stress management, and self-care techniques.</p>
-            <p>Our team has conducted extensive research and collaborated with mental health professionals to ensure the
-                accuracy and relevance of the information we provide. We offer a range of articles and resources that
-                cover different aspects of mental health. It is a website designed just for you.</p>
-            <p>We understand that seeking help for mental health can be challenging for many individuals. Therefore, we
-                have included a directory of helplines and support organizations that offer confidential assistance to
-                those in need. We encourage you to explore our website and make use of the available resources.</p>
-            <p>Thank you for visiting our website. We hope that the information we provide is exactly what you are
-                looking for. Please don't hesitate to contact us. Together, let's create a community that prioritizes
-                mental well-being.</p>
-            <p>• The Team at [Mental Health]</p>
+            <div class="head">
+                <h2>Unveling a visionary Collective</h2>
+            </div>
+            <div class="main-content">
+                <p>We are a dynamic group of 10 secon-year computer science students persuing our education at the
+                    prestigious University of Dodoma, nestled within the esteemed college of informatics and virtual
+                    education (CIVE).</p>
+                <p>Driven by shared mission, we have united to establish a profound platform where the realms of mental
+                    health intertwine with knowledge. Our unwavering commitment is to deliver invaliable information,
+                    empowering individuals from all walks of life with insights, guidance and support on their mental
+                    health journeys</p>
+            </div>
+            <div class="subs">
+                <div class="sub">
+                    <p>Mental health is a subject that affects everyone, regardless of age, gender, or background. It is
+                        crucial
+                        to address mental health concerns, provide support, and educate individuals about available
+                        resources.
+                        We hope our website can be your private space where you can access reliable information about
+                        various
+                        mental health issues, including anxiety, depression, stress management, and self-care
+                        techniques.</p>
+                </div>
+                <div class="line"></div>
+                <div class="sub">
+                    <p class="sub-para">Our team has conducted extensive research and collaborated with mental health professionals to
+                        ensure the
+                        accuracy and relevance of the information we provide. We offer a range of articles and resources
+                        that
+                        cover different aspects of mental health. It is a website designed just for you.</p>
+                        
+                    <p>
+                        We understand that seeking help for mental health can be challenging for many individuals.
+                        Therefore, we
+                        have included a directory of helplines and support organizations that offer confidential
+                        assistance to
+                        those in need. We encourage you to explore our website and make use of the available resources.
+                    </p>
+                </div>
+            </div>
         </div>
+
+
         <div class="pics">
             <span><img src="../assets/mentalHealth1.jpg" height="250px" width="250px" alt=""></span>
             <span><img src="../assets/mentalHealth3.jpg" height="250px" width="250px" alt=""></span>
