done with suleiman fixes. Also done with mobile desing

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <h2>Unveling a visionary Collective</h2>
             </div>
             <div class="main-content">
-                <p>We are a dynamic group of 10 secon-year computer science students persuing our education at the
+                <p class="p1">We are a dynamic group of 10 secon-year computer science students persuing our education at the
                     prestigious University of Dodoma, nestled within the esteemed college of informatics and virtual
                     education (CIVE).</p>
-                <p>Driven by shared mission, we have united to establish a profound platform where the realms of mental
+                <p class="p2">Driven by shared mission, we have united to establish a profound platform where the realms of mental
                     health intertwine with knowledge. Our unwavering commitment is to deliver invaliable information,
                     empowering individuals from all walks of life with insights, guidance and support on their mental
                     health journeys</p>
@@ -63,7 +63,7 @@
                         that
                         cover different aspects of mental health. It is a website designed just for you.</p>
                         
-                    <p>
+                    <p class="sub-para2">
                         We understand that seeking help for mental health can be challenging for many individuals.
                         Therefore, we
                         have included a directory of helplines and support organizations that offer confidential
@@ -75,58 +75,76 @@
         </div>
 
 
-        <div class="pics">
-            <span><img src="../assets/mentalHealth1.jpg" height="250px" width="250px" alt=""></span>
-            <span><img src="../assets/mentalHealth3.jpg" height="250px" width="250px" alt=""></span>
-            <span><img src="../assets/meditation.jpg" height="250px" width="250px" alt=""></span>
-            <span><img src="../assets/aware2.jpeg" height="250px" width="250px" alt=""></span>
-            <span><img src="../assets/aware1.jpeg" height="250px" width="250px" alt=""></span>
+        <section class="part">
+            <div class="head">
+                <h2>Our Partners</h2>
+            </div>
+            <div class="partners">
+                <div class="pic pic1"></div>
+                <div class="pic pic2"></div>
+                <div class="pic pic3"></div>
+                <div class="pic pic4"></div>
+                <div class="pic pic5"></div>
+                <!-- <span><img src="../assets/mentalHealth1.jpg" height="250px" width="250px" alt=""></span>
+                <span><img src="../assets/mentalHealth3.jpg" height="250px" width="250px" alt=""></span>
+                <span><img src="../assets/meditation.jpg" height="250px" width="250px" alt=""></span>
+                <span><img src="../assets/aware2.jpeg" height="250px" width="250px" alt=""></span>
+                <span><img src="../assets/aware1.jpeg" height="250px" width="250px" alt=""></span> -->
+            </div>
+        </section>
+    </section>
+
+    <section class="achievement">
+        <div class="head">
+            <h2>Achievements</h2>
+        </div>
+        <div class="awards">
+                <div class="award">
+                    <div class="profile-pic pic-one"></div>
+                    <div class="explain">
+                        <p>We are honored to have received awards and recognition for our commitment to mental health
+                            advocacy and support. These accolades underscore our dedication to providing high-quality
+                            resources and making a positive impact in the mental health space.</p>
+                    </div>
+                </div>
+
+                <div class="award">
+                    <div class="profile-pic pic-two"></div>
+                    <div class="explain">
+                        <p>We are proud to have built a thriving online community dedicated to mental health. With a
+                            significant reach and active user engagement, we have successfully connected with individuals
+                            from around the world who are seeking support, information, and empowerment.</p>
+                    </div>
+                </div>
+
+                <div class="award">
+                    <div class="profile-pic pic-three"></div>
+                    <div class="explain">
+                        <p>The true measure of our success lies in the positive impact we have on individuals' lives. We are
+                            humbled and grateful for the countless stories of transformation and healing shared by our
+                            users.</p>
+                    </div>
+                </div>
+
+                <div class="award">
+                    <div class="profile-pic pic-four"></div>
+                    <div class="explain">
+                        <p>Collaboration is at the heart of our mission, and we are delighted to have formed partnerships
+                            and collaborations with esteemed mental health organizations, professionals, and influencers.
+                        </p>
+                    </div>
+                </div>
+        </div>
+        <div class="arc2">
+            <p>We remain committed to our mission of fostering mental well-being, breaking barriers, and empowering
+                individuals to prioritize their mental health. Our achievements are a testament to the dedication
+                and collective efforts of our team, partners, and the incredible community we serve.</p>
         </div>
     </section>
-    <section>
-        <div class="arcTitle">
-            <p>Archievements</p>
-        </div>
-        <div class="arc">
-            <div class="arc1">
-                <span>
-                    <img src="../assets/award4.webp" alt="" width="100px" height="100px">
-                    <p>We are honored to have received awards and recognition for our commitment to mental health
-                        advocacy and support. These accolades underscore our dedication to providing high-quality
-                        resources and making a positive impact in the mental health space.</p>
-                </span>
-                <span>
-                    <img src="../assets/award2.jpg" alt="" width="100px" height="100px">
-                    <p>We are proud to have built a thriving online community dedicated to mental health. With a
-                        significant reach and active user engagement, we have successfully connected with individuals
-                        from around the world who are seeking support, information, and empowerment.</p>
-                </span>
-                <span>
-                    <img src="../assets/award1.jpg" alt="" width="100px" height="100px">
-                    <p>The true measure of our success lies in the positive impact we have on individuals' lives. We are
-                        humbled and grateful for the countless stories of transformation and healing shared by our
-                        users.</p>
-                </span>
-                <span>
-                    <img src="../assets/award7.webp" alt="" width="100px" height="100px">
-                    <p>Collaboration is at the heart of our mission, and we are delighted to have formed partnerships
-                        and collaborations with esteemed mental health organizations, professionals, and influencers.
-                    </p>
-                </span>
-                <span>
-                    <img src="../assets/award5.jpg" alt="" width="100px" height="100px">
-                    <p>We are dedicated to raising awareness about mental health and combating stigma. Our efforts have
-                        had a significant impact on mental health awareness, breaking barriers and fostering open
-                        conversations.</p>
-                </span>
-            </div>
-            <div class="arc2">
-                <p>We remain committed to our mission of fostering mental well-being, breaking barriers, and empowering
-                    individuals to prioritize their mental health. Our achievements are a testament to the dedication
-                    and collective efforts of our team, partners, and the incredible community we serve.</p>
-            </div>
-        </div>
-    </section>
+
+
+
+
     <footer>
         <p>Copyright 2023 Mental Health. All Rights Reserved.</p>
     </footer>
