added Javascript on the more cards toggler btn

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <p>Pause, Breathe, and Nurture your soul. Explore these gentle reminders to uplift your well-being. Take a
             moment to embrase self care, one step at a time. Ready for more inspiration ? Click below to unveil
             additional cards and delve deeper into your mental health journey</p>
-        <button>More Cards</button>
+        <button id="toggleCards">More Cards</button>
     </div>
 
-    <section class="cards-add">
+    <section class="cards cards-add-none" id="additional-cards">
         <div class="card">
             <div class="img">
                 <!-- <img src="./assets/Exercise.jpg" alt="Exercise"> -->
@@ -140,6 +140,7 @@
 
     </div>
 
+    <script src="app.js"></script>
 </body>
 
 </html>
