cleaned css and finished index file editing v2

--- a/index.html
+++ b/index.html
@@ -10,59 +10,64 @@
 
 <body>
     <nav></nav>
-
-    <section class="cards">
-        <div class="card">
-            <div class="img">
+    <section class="mhealth_conditions">
+        <div class="head">
+            <h2>Mental Health Conditions</h2>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="img">
+                </div>
+                <div class="content">
+                    <p class="title">Anxiety</p>
+                    <p>
+                        Persistent unease, excessive worry, and fear. It can disrupt daily life and relationships,
+                        causing phusical and emotional symptoms. Symptoms can be very severe enough to result in
+                        significant
+                        distress or significant impairment in functioning.
+                    </p>
+                    <div class="link"><a href="#">More</a></div>
+                </div>
             </div>
-            <div class="content">
-                <p class="title">Get Restful sleep</p>
-                <p>
-                    Nurturing your mind bgins with a Restful slumber. Embrace the healing power of sleep, allowing your
-                    mind to rejuvenate, dreams to weave tranquility and worries to fade into the night. Awaken
-                    refreshed, ready to face the day with renewed strength and resilience.
-                </p>
-                <div class="link"><a href="#">More</a></div>
+
+            <div class="card">
+                <div class="img">
+                </div>
+                <div class="content">
+                    <p class="title">Depression</p>
+                    <p>
+                        Overwhelming sadness, loss of interest, and lack of energy. It affects moods, thoughts, and
+                        daily
+                        functioning. During a depressive eppisode, persorn experiences depressed mood or loss of
+                        pleasure or
+                        interest in activities, for most of the day, nearly every day, for atleast two weeks.
+                    <div class="link"><a href="#">Read More</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="img">
+                </div>
+                <div class="content">
+                    <p class="title">Bipolar Disorder</p>
+                    <p>
+                        A complex mental health condition characterized by extreme shifts in mood, energy and activity
+                        levels. It involves episodes of mania, where individuals experience heightened euphoria, and
+                        impulsivity, followed by periods of depression.
+                    </p>
+                    <div class="link"><a href="#">Read More</a></div>
+                </div>
             </div>
         </div>
 
-        <div class="card">
-            <div class="img">
-            </div>
-            <div class="content">
-                <p class="title">Nourish Connections</p>
-                <p>
-                    In a digital world filled with noise, grant yourself moments of tranquility. Limit your time on
-                    social media, reclaiming precious hours for selft-reflextion, authentic connections and meaningful
-                    experiences. Embrace the freedom to be present.
-
-                </p>
-                <div class="link"><a href="#">Read More</a></div>
-            </div>
+        <div class="prologue">
+            <p>Remember, mental health matters. It's okay to not be okay. Seek understanding, show compassiona, and
+                break the stigma. Together we can create a supportive community where everyone feels heard, valued, and
+                empowered. Let's embrace mental well-being and foster a world of acceptance and healing</p>
+        </div>
         </div>
 
-        <div class="card">
-            <div class="img">
-            </div>
-            <div class="content">
-                <p class="title">Nourish Connections</p>
-                <p>
-                    Amid life's challenges, cherish the bonds that uplift your spirit. Invest time in nurturing
-                    relationships that bring you joy, understanding, and support. Share heartfelt converations, create
-                    lasting memories and embrace comfort of knowing your are never alone.
-
-                </p>
-                <div class="link"><a href="#">Read More</a></div>
-            </div>
-        </div>
     </section>
-
-    <div class="prologue">
-        <p>Pause, Breathe, and Nurture your soul. Explore these gentle reminders to uplift your well-being. Take a
-            moment to embrase self care, one step at a time. Ready for more inspiration ? Click below to unveil
-            additional cards and delve deeper into your mental health journey</p>
-    </div>
-    </div>
 
 </body>
 
