--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="cards">
             <div class="card">
-                <div class="img">
+                <div class="img img1">
                 </div>
                 <div class="content">
                     <p class="title">Anxiety</p>
@@ -31,7 +31,7 @@
             </div>
 
             <div class="card">
-                <div class="img">
+                <div class="img img2">
                 </div>
                 <div class="content">
                     <p class="title">Depression</p>
@@ -46,7 +46,7 @@
             </div>
 
             <div class="card">
-                <div class="img">
+                <div class="img img3">
                 </div>
                 <div class="content">
                     <p class="title">Bipolar Disorder</p>
