added image placement classes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
     <section class="cards">
         <div class="card">
-            <div class="img">
-                <!-- <img src="./assets/Sleeping-cat.jpg" alt="Sleeping cat"> -->
+            <div class="img img1">
             </div>
             <div class="content">
                 <p class="title">Get Restful sleep</p>
@@ -29,25 +28,8 @@
             </div>
         </div>
 
-        <!-- <div class="card">
-            <div class="img">
-
-            </div>
-
-            <div class="content">
-                <p class="title">Cut back from social Media</p>
-                <p>
-                    In a digital world filled with noise, grant yourself moments of tranquility. Limit your time on
-                    social media, reclaiming precious hours for selft-reflextion, authentic connections and meaningful
-                    experiences. Embrace the freedom to be present.
-                </p>
-                <div class="link"><a href="#">Read More</a></div>
-            </div>
-        </div> -->
-
         <div class="card">
-            <div class="img">
-                <!-- <img src="./assets/Relationships-1.jpg" alt="Relationships"> -->
+            <div class="img img2">
             </div>
             <div class="content">
                 <p class="title">Nourish Connections</p>
@@ -62,8 +44,7 @@
         </div>
 
         <div class="card">
-            <div class="img">
-                <!-- <img src="./assets/Relationships-1.jpg" alt="Relationships"> -->
+            <div class="img img3">
             </div>
             <div class="content">
                 <p class="title">Nourish Connections</p>
@@ -87,8 +68,7 @@
 
     <section class="cards cards-add-none" id="additional-cards">
         <div class="card">
-            <div class="img">
-                <!-- <img src="./assets/Exercise.jpg" alt="Exercise"> -->
+            <div class="img img4">
             </div>
             <div class="content">
                 <p class="title">Embrace Your Rythm</p>
@@ -103,8 +83,7 @@
         </div>
 
         <div class="card">
-            <div class="img">
-                <!-- <img src="./assets/Exercise.jpg" alt="Exercise"> -->
+            <div class="img img5">
             </div>
             <div class="content">
                 <p class="title">Nourish from within</p>
@@ -120,8 +99,7 @@
         </div>
 
         <div class="card">
-            <div class="img">
-                <!-- <img src="./assets/Exercise.jpg" alt="Exercise"> -->
+            <div class="img img6">
             </div>
             <div class="content">
                 <p class="title">Gentle Selft-Compassion</p>
