Monday, 19 June 2023 Added assumed max specificity

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="content">
                 <p class="title">Get Restful sleep</p>
                 <p>
-                    Nurturing your mind bgins with a Restful slumber. Embrace the healing power of sleep, allowing your
-                    mind to rejuvenate, dreams to weave tranquility and worries to fade into the night. Awaken
-                    refreshed, ready to face the day with renewed strength and resilience.
+                    Nurturing your mind bgins with a Restful slumber. Embrace the healing power of sleep,
+                    allowing your mind to rejuvenate, dreams to weave tranquility and worries to fade into
+                    the night. Awaken refreshed, ready to face the day with renewed strength and resilience.
                 </p>
                 <div class="link"><a href="#">More</a></div>
             </div>
@@ -35,8 +35,8 @@
                 <p class="title">Nourish Connections</p>
                 <p>
                     In a digital world filled with noise, grant yourself moments of tranquility. Limit your time on
-                    social media, reclaiming precious hours for selft-reflextion, authentic connections and meaningful
-                    experiences. Embrace the freedom to be present.
+                    social media, reclaiming precious hours for selft-reflextion, authentic connections and
+                    meaningful experiences. Embrace the freedom to be present.
 
                 </p>
                 <div class="link"><a href="#">Read More</a></div>
@@ -50,8 +50,8 @@
                 <p class="title">Nourish Connections</p>
                 <p>
                     Amid life's challenges, cherish the bonds that uplift your spirit. Invest time in nurturing
-                    relationships that bring you joy, understanding, and support. Share heartfelt converations, create
-                    lasting memories and embrace comfort of knowing your are never alone.
+                    relationships that bring you joy, understanding, and support. Share heartfelt
+                    converations, create lasting memories and embrace comfort of knowing your are never alone.
 
                 </p>
                 <div class="link"><a href="#">Read More</a></div>
@@ -73,10 +73,10 @@
             <div class="content">
                 <p class="title">Embrace Your Rythm</p>
                 <p>
-                    Let your body be your guide on the path to wellness. Engage in physical activities that bring you
-                    joy and energize your spirit. Dance, walk, stretch, or sweat. Move in ways that reasonate with your
-                    unique being. Embrace the freedom to honor your body's needs, nurturing your mental health with
-                    every step, beat and breath.
+                    Let your body be your guide on the path to wellness. Engage in physical activities that 
+                    bring you joy and energize your spirit. Dance, walk, stretch, or sweat. Move in ways 
+                    that reasonate with your unique being. Embrace the freedom to honor your body's 
+                    needs, nurturing your mental health with every step, beat and breath.
                 </p>
                 <div class="link"><a href="#">Read More</a></div>
             </div>
