--- a/v1/index.html
+++ b/v1/index.html
@@ -107,6 +107,66 @@
         </div>
     </section>
 
+    <section class="mhealth_conditions">
+        <div class="head">
+            <h2>Mental Health Conditions</h2>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="img img1">
+                </div>
+                <div class="content">
+                    <p class="title">Anxiety</p>
+                    <p>
+                        Persistent unease, excessive worry, and fear. It can disrupt daily life and relationships,
+                        causing phusical and emotional symptoms. Symptoms can be very severe enough to result in
+                        significant
+                        distress or significant impairment in functioning.
+                    </p>
+                    <div class="link"><a href="#">More</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="img img2">
+                </div>
+                <div class="content">
+                    <p class="title">Depression</p>
+                    <p>
+                        Overwhelming sadness, loss of interest, and lack of energy. It affects moods, thoughts, and
+                        daily
+                        functioning. During a depressive eppisode, persorn experiences depressed mood or loss of
+                        pleasure or
+                        interest in activities, for most of the day, nearly every day, for atleast two weeks.
+                    <div class="link"><a href="#">Read More</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="img img3">
+                </div>
+                <div class="content">
+                    <p class="title">Bipolar Disorder</p>
+                    <p>
+                        A complex mental health condition characterized by extreme shifts in mood, energy and activity
+                        levels. It involves episodes of mania, where individuals experience heightened euphoria, and
+                        impulsivity, followed by periods of depression.
+                    </p>
+                    <div class="link"><a href="#">Read More</a></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="prologue">
+            <p>Remember, mental health matters. It's okay to not be okay. Seek understanding, show compassiona, and
+                break the stigma. Together we can create a supportive community where everyone feels heard, valued, and
+                empowered. Let's embrace mental well-being and foster a world of acceptance and healing</p>
+        </div>
+        </div>
+
+    </section>
+    
+
     <section class="section" id="about">
         <div class="section-content">
             <div class="container">
