--- a/v1/index.html
+++ b/v1/index.html
@@ -299,6 +299,7 @@
     <script src="./scripts/jquery.js"></script>
     <script src="./scripts/bootstrap.js"></script>
     <script src="./scripts/app.js"></script>
+    <script src="./scripts/addcards.js"></script>
 </body>
 
 </html>
