--- a/v1/index.html
+++ b/v1/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#services">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="#footer">Contact</a>
                 </li>
             </ul>
         </div>
@@ -272,7 +272,7 @@
 
 
     <!-- FOOTER SECTION START'S HERE -->
-    <section>
+    <section class="footer" id="footer">
 
         <div class="footmain">
 
@@ -333,33 +333,10 @@
                 <p>This website is created and maintained by <a href="https://www.udom.ac.tz/">University of Dodoma</a>
                     computer
                     science students</p>
-                <p>© Copyright 2023, All Rights Reserved</p>
+                <p> &COPY; Copyright 2023, All Rights Reserved</p>
             </div>
         </footer>
 
-    </section>
-
-
-    <section class="section" id="about">
-        <div class="section-content">
-            <div class="container">
-                <h2>About</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur libero ac odio molestie,
-                    vel
-                    bibendum nulla pharetra.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="section" id="services">
-        <div class="section-content">
-            <div class="container">
-                <h2>Services</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur libero ac odio molestie,
-                    vel
-                    bibendum nulla pharetra.</p>
-            </div>
-        </div>
     </section>
 
     <div class="scroll-to-top">
