--- a/v1/index.html
+++ b/v1/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="#about">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#services">Services</a>
