commit for branch switch to sleiz

--- a/v1/index.html
+++ b/v1/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">mHealth</a>
+        <a class="navbar-brand" href="./about_us/index.html#parAbt">mHealth</a>
         <div class="navbar-toggler">
             <span></span>
             <span></span>
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">About Us</a>
+                    <a class="nav-link" href="./about_us/index.html#parAbt">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#services">Services</a>
