added faq to v1, updated paths and changed app.js

--- a/v1/about_us/index.html
+++ b/v1/about_us/index.html
@@ -14,7 +14,10 @@
 <body>
     <section>
 
+        <div class="hero-section">
+            <!-- <p>About Us</p> -->
 
+        </div>
         <div class="parAbt">
             <div class="head">
                 <h2>Unveling a visionary Collective</h2>
