--- a/v1/index.html
+++ b/v1/index.html
@@ -32,6 +32,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#footer">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./faq/index.html">Faq</a>
+                </li>
             </ul>
         </div>
     </nav>
